# homelab-apps

./: APPLICATION_TEMPLATE.yaml  CLAUDE.md
.github/workflows/: dance-app-ci.yml
apps/: app-of-apps.yaml  argocdexample.yaml  csi-plugin.yaml  emulatorjs.yaml  guestbook.yaml  home-assistant.yaml  kyverno-crds.yaml  kyverno-policies.yaml  kyverno.yaml  masterclass-downloader.yaml  metallb-config.yaml  metallb-namespace.yaml  metallb.yaml  n8n.yaml  nginx.yaml  plex.yaml  radarr.yaml  romm.yaml  tamagotchi.yaml  test.yaml
apps/dance-classes/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml
archivedapps/: metallb-config.yaml
argocd/: argocd-deployment.yaml  values.yaml
bases/guestbook/: guestbook-ui-deployment.yaml  kustomization.yaml
bases/kyverno-policies/: add-control-plane-toleration.yaml
bases/masterclass-downloader/: configmap.yaml  job.yaml  kustomization.yaml  persistentvolumeclaim.yaml  secret.yaml
bases/metallb-config/: ipaddresspool.yaml  l2advertisement.yaml
dance_app/: .gitignore  README.md  analysis_options.yaml  melos.yaml  pubspec.yaml
hytte/: .gitignore  README.md  RECIPES.md  SCREENSHOTS.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
services/tamagotchi/: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  pyproject.toml
services/tamagotchi/app/: clock.py  db.py  game.py  main.py  personalities.py  tick.py
services/tamagotchi/scripts/: gen_icons.py
services/tamagotchi/web/: app.js  index.html  manifest.webmanifest  style.css
(+165 files in other folders)
