[project]
name = "tamagotchi"
version = "0.1.0"
description = "A self-hosted virtual pet for the homelab."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
